--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <p id="error-message" style="display: none;">Invalid username or password.</p>
+        <p id="error-message">Invalid username or password.</p>
     </div>
     <script src="script.js"></script>
 </body>
