add navbar to homepage

--- a/homepage.html
+++ b/homepage.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/home.css">
     <title>HomePage</title>
 </head>
 <body>
 
-    <h2 id="welcome">Welcome to this App!</h2>
-    
+    <nav>
+        <div class="logo">LOGOO</div>
+        <ul class="navigateOptions">
+                <li><a class="home" href="./homepage.html">Home</a></li>
+                <li><a class="track" href="#">Track</a></li>
+                <li><a class="logOut" href="#">logOut</a></li>
+        </ul>
+    </nav>
+    <section>
+        
+    </section>
+
+
+
+  <script src="homepage.js"></script>  
 </body>
 </html>
