--- a/homepage.html
+++ b/homepage.html
@@ -13,12 +13,20 @@
         <ul class="navigateOptions">
                 <li><a class="home" href="./homepage.html">Home</a></li>
                 <li><a class="track" href="#">Track</a></li>
-                <li><a class="logOut" href="#">logOut</a></li>
+                <li><a class="logOut" href="./index.html">logOut</a></li>
+                <div>
+                    <a href="#">
+                        <div class="profileLetter">A</div>
+                    </a>
+                </div>
         </ul>
     </nav>
     <section>
-        
+
     </section>
+    <footer>
+        <p>@wangombevictor5@gmail.com</p>
+    </footer>
 
 
 
