--- a/homepage.html
+++ b/homepage.html
@@ -15,14 +15,23 @@
                 <li><a class="track" href="#">Track</a></li>
                 <li><a class="logOut" href="./index.html">logOut</a></li>
                 <div>
-                    <a href="#">
+                    <a id="popup-link" href="#">
                         <div class="profileLetter">A</div>
                     </a>
                 </div>
         </ul>
     </nav>
     <section>
-
+        <div id="pop_up">
+                <h1>Pop-up Window</h1>
+                <form action="#">
+                    <p>please agree on our terms and conditions</p>
+                    
+                    <label for="pop-upText"> Agree: <input type="checkbox" value="yes"><br></label>
+                    
+                    <input id="close-button" type="submit" value="close">
+                </form>
+        </div>
     </section>
     <footer>
         <p>@wangombevictor5@gmail.com</p>
